# pubmed_embeddings

./: .gitignore  README.md  pyproject.toml
src/pubmed_embeddings/: __init__.py  benchmark_spike.py  build_hnsw.py  downloader.py  embeddings.py  extract.py  index_utils.py  query.py  stats_report.py  tei_cluster.py
tasks/: lessons.md  todo.md
tests/: test_build_hnsw.py  test_downloader.py  test_embeddings.py  test_query.py  test_stats_report.py  test_tei_cluster.py
