[project]
name = "pubmed-embeddings"
version = "0.1.0"
description = "PubMed baseline and update file downloader"
requires-python = ">=3.11"
dependencies = ["tqdm>=4.67.0"]

[project.scripts]
pubmed-download = "pubmed_embeddings.downloader:main"
pubmed-extract = "pubmed_embeddings.extract:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
