[project]
name = "pubmed-embeddings"
version = "0.1.0"
description = "PubMed baseline and update file downloader"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
pubmed-download = "pubmed_embeddings.downloader:main"
pubmed-extract = "pubmed_embeddings.extract:main"
pubmed-embed = "pubmed_embeddings.embeddings:main"
pubmed-stats = "pubmed_embeddings.stats_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
